Prevent hero image from overflowing container

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,8 @@ ul {
   background-color: #1f2937;
   display: flex;
   flex-direction: column;
-  padding: 16px 150px 90px 150px;
+  padding: 16px 100px 90px;
+  gap: 90px;
 }
 
 .header {
@@ -51,7 +52,6 @@ ul {
   align-items: center;
   flex-wrap: wrap;
   gap: 20px;
-  padding-top: 90px;
 }
 
 .hero-main {
@@ -70,9 +70,16 @@ ul {
   border-radius: 6px;
 }
 
+/* Added to keep image from overflowing container */
+.hero-img-container {
+  width: 500px;
+}
+
 .hero-img {
-  max-width: 500px;
+  width: 100%;
   height: auto;
+  border: 0;
+  border-radius: 3px;
 }
 
 /* Information section */
